Feat: Create get list of MapPlay
- Create get list of MapPlay
